# wsdf

./: .gitignore  .gitmodules  Cargo.toml  README.md  build-examples.sh  examples.sh
.github/workflows/: ci.yml
docs/: CONTRIBUTING  TODO.txt
epan-sys/: Cargo.toml  README.md  bindings.rs  build.rs  wrapper.h
epan-sys/src/: lib.rs
wsdf/: Cargo.toml
wsdf-derive/: Cargo.toml
wsdf-derive/src/: attributes.rs  lib.rs  model.rs  types.rs  util.rs
wsdf/examples/: dns.rs  heuristic.rs  moldudp64.rs  playground.rs  udp.rs
wsdf/src/: lib.rs
wsdf/tests/should_fail/: bitwise_or_more_than_two_display.rs  bitwise_or_more_than_two_display.stderr  dispatch_based_on_struct.rs  dispatch_based_on_struct.stderr  missing_container_attr.rs  missing_container_attr.stderr  repeat_based_on_vector.rs  repeat_based_on_vector.stderr  union.rs  union.stderr  unknown_container_attr.rs  unknown_container_attr.stderr
wsdf/tests/should_pass/: arrays.rs  arrays_nested.rs  bitwise_or_display.rs  decode_from.rs  nested_type.rs  pre_post_dissect.rs  struct.rs  struct_with_nested_struct.rs  taps.rs  unit_tuple_struct_field.rs  unit_tuple_struct_with_field_meta_items.rs  unit_tuple_variant_primitive_type.rs
wsdf/tests/simple/: dispatch.rs  version.rs  version2.rs
